--- a/index.html
+++ b/index.html
@@ -3,33 +3,42 @@
 <html lang="en">
 
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="HTML, CSS">
-        <meta name="description" content="[Placeholder]">
-        <title>Fix By Fish</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
 
-    <body>
-        <nav class="navbar">
-            <ul>
-                <img src="images/FBF_Logo_White.png" class="logo">
-                <h1>Fix by Fish</h1>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-        
-        <div class="header-image"></div>
-        <div class="header-bubble">
-            <h1>Welcome!</h1>
-        </div>
-        <div class="body-bubble">
-            <p>This is placeholder text.</p>
-        </div>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="HTML, CSS">
+    <meta name="description" content="[Placeholder]">
+    <title>Fix By Fish</title>
+    <link rel="stylesheet" href="../styles.css">
+</head>
 
+<body>
+    <nav class="navbar">
+        <ul>
+            <img src="../images/FBF_Logo_White.png" class="logo">
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../about.html">About</a></li>
+        </ul>
+    </nav>
+
+    <div class="header-image" style="background: url('/images/PlaceHolder.png') no-repeat center center/cover;"></div>
+    <div class="container">
+        <div class="main-content">
+            <div class="header-bubble">
+                <h1>Welcome!</h1>
+            </div>
+            <div class="body-bubble">
+                <p>I like to make stuff, but I hate social media. This site is nothing more than a place for me to talk about and share my projects. Here you'll find projects that vary from games I've made, to electronics I've repaired, and whatever other side-quests I decide to take on. </p>
+            </div>
+        </div>
+        <div class="sidebar">
+            <h2>Projects</h2>
+            <ul id="article-list"></ul>
+        </div>
+    </div>
+    
+    <script src="../loader.js"></script>
+
+</body>
 </html>
