--- a/index.html
+++ b/index.html
@@ -11,10 +11,19 @@
     <meta name="description" content="[Placeholder]">
     <title>Fix By Fish</title>
     <link rel="stylesheet" href="../styles.css">
+    <link rel="icon" href="../images/FBF_Logo_White_Favicon.png" type="image/png">
 </head>
 
 <body>
-    <a href="../index.html"><img src="../images/FBF_Logo_White.png" class="logo"></a>
+    <div>
+        <img src="../images/FBF_Logo_White.png" class="logo">
+        <div class="tabs" id="tabs" onclick="togglePanel()">
+          <img src="../images/Tabs.png" alt="Tabs Icon" class="tabs-icon">
+        </div>
+        <div class="panel" id="panel">
+          <ul id="article-list"></ul>
+        </div>
+      </div>
     <div class="header-image" style="background: url('/images/PlaceHolder.png') no-repeat center center/cover;"></div>
     <div class="container">
         <div class="main-content">
@@ -27,12 +36,9 @@
                
             </div>
         </div>
-        <div class="sidebar">
-            <ul id="article-list"></ul>
-        </div>
     </div>
     
-    <script src="../loader.js"></script>
+    <script src="../articleHandler.js"></script>
 
 </body>
 </html>
