--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
     <div class="container">
         <div class="main-content">
             <div class="header-bubble">
-                <h1>Welcome!</h1>
+                <h1>Fix By Fish</h1>
             </div>
             <div class="body-bubble">
                 <p>I like to make stuff, but I hate social media. This site is nothing more than a place for me to talk about and share my projects. Here you'll find projects that vary from games I've made, to electronics I've repaired, and whatever other side-quests I decide to take on. </p>
-               
             </div>
         </div>
     </div>
