--- a/index.html
+++ b/index.html
@@ -29,9 +29,20 @@
         <div class="main-content">
             <div class="header-bubble">
                 <h1>Fix By Fish</h1>
+
             </div>
             <div class="body-bubble">
-                <p>I like to make stuff, but I hate social media. This site is nothing more than a place for me to talk about and share my projects. Here you'll find projects that vary from games I've made, to electronics I've repaired, and whatever other side-quests I decide to take on. </p>
+                <h2>Welcome</h2> 
+                <p>Hi, I'm Shawn, a technician based in Cleveland, Ohio. This is my personal website for sharing projects and interests. I started very recently, so please keep that in mind, as some placeholder images and articles remain.
+                </p>
+                
+                <h2>Why make a website?</h2> 
+                <p>I like making and sharing my projects, but I don't like the current state of social media. This site is my nerdy little corner of the internet where I can share until my heart's content while avoiding the toxic communities of mainstream social media or the addictive cycle of posting for engagement. If people find my site interesting, it's perfect, but this is more for me than anyone else.
+                </p>
+
+                <h2>Why the name?</h2> 
+                <p>It's pretty simple. I use the username Fish on most websites, and I like to fix stuff ~so Fix By Fish. Repairing electronics is only a portion of the content I want to post here.
+                </p>
             </div>
         </div>
     </div>
