--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <ul id="article-list"></ul>
         </div>
     </div>
-    <div class="header-image" style="background: url('/images/PlaceHolder.png') no-repeat center center/cover;"></div>
+    <div class="header-image" style="background: url('../articles/Headers/placeholder.png') no-repeat center center/cover;"></div>
     <div class="container">
         <div class="main-content">
             <div class="header-bubble">
