style and privacy policy

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <html>
 
+<!-- Site Header -->
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,6 +29,7 @@
     <link rel="icon" href="../images/FBF_Logo_White_Favicon.png" type="image/png">
 </head>
 
+<!-- Site Body -->
 <body>
     <div>
         <img src="../images/FBF_Logo_White.png" class="logo">
@@ -47,20 +49,28 @@
             </div>
             <div class="body-bubble">
                 <h2>Welcome</h2>
-                <p>Hi, I'm Shawn, a technician based in Cleveland, Ohio. This is my personal website for sharing projects and interests. I started very recently, so please keep that in mind, as some placeholder images and articles remain.
-                </p>
+                <p>Hi, I'm Shawn, a technician based in Cleveland, Ohio. This is my personal website for sharing projects and interests. I started very recently, so please keep that in mind, as some placeholder images and articles remain.</p>
+                <br>
 
                 <h2>Why make a website?</h2>
-                <p>I like making and sharing my projects, but I don't like the current state of social media. This site is my nerdy little corner of the internet where I can share until my heart's content while avoiding the toxic communities of mainstream social media or the addictive cycle of posting for engagement. If people find my site interesting, it's perfect, but this is more for me than anyone else.
-                </p>
+                <p>I like making and sharing my projects, but I don't like the current state of social media. This site is my nerdy little corner of the internet where I can share until my heart's content while avoiding the toxic communities of mainstream social media or the addictive cycle of posting for engagement. If people find my site interesting, it's perfect, but this is more for me than anyone else.</p>
+                <br>
 
                 <h2>Why the name?</h2>
-                <p>It's pretty simple. I use the username Fish on most websites, and I like to fix stuff ~so Fix By Fish. Repairing electronics is only a portion of the content I want to post here.
-                </p>
+                <p>It's pretty simple. I use the username Fish on most websites, and I like to fix stuff ~so Fix By Fish. Repairing electronics is only a portion of the content I want to post here.</p>
+                <br>
+                
             </div>
         </div>
     </div>
 
+    <!-- Site Footer -->
+    <footer class="site-footer">
+        <p>&copy; 2024 FixByFish <a href="../articles/privacypolicy.html" class="footer-link">Privacy Policy</a></p>
+        <p><a href="https://morals.artstation.com/" class="footer-link">ArtStation</a><a href="https://discord.com/invite/AmSq7Qdvan" class="footer-link">Discord</a><a href="https://shawnwolf.itch.io/" class="footer-link">Itch.io</a><a href="https://www.linkedin.com/in/shawntwolf/" class="footer-link">LinkedIn</a><p>
+    </footer>
+
+    <!-- JavaScript -->
     <script src="../articleHandler.js"></script>
 
 </body>
