--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
     <div class="header-image" style="background: url('../articles/Headers/PlaceHolder.png') no-repeat center center/cover;"></div>
     <div class="container">
         <div class="main-content">
-            <div class="header-bubble">
-                <h1>Fix By Fish</h1>
-
+            <div class="txt-header-container">
+                <div class="txt-header-bubble">
+                    <h1>Fix By Fish</h1>
+                </div>
             </div>
             <div class="body-bubble">
                 <h2>Welcome</h2>
