--- a/index.html
+++ b/index.html
@@ -60,16 +60,14 @@
                 <h2>Why the name?</h2>
                 <p>It's pretty simple. I use the username Fish on most websites, and I like to fix stuff ~so Fix By Fish. Repairing electronics is only a portion of the content I want to post here.</p>
                 <br>
-                
             </div>
         </div>
+        <!-- Site Footer -->
+        <footer class="site-footer">
+            <p>&copy; 2024 FixByFish <a href="../articles/privacypolicy.html" class="footer-link">Privacy Policy</a></p>
+            <p><a href="https://morals.artstation.com/" class="footer-link">ArtStation</a><a href="https://discord.com/invite/AmSq7Qdvan" class="footer-link">Discord</a><a href="mailto:swolf@fixbyfish.com" class="footer-link">Email</a><a href="https://shawnwolf.itch.io/" class="footer-link">Itch.io</a><a href="https://www.linkedin.com/in/shawntwolf/" class="footer-link">LinkedIn</a><p>
+        </footer>
     </div>
-
-    <!-- Site Footer -->
-    <footer class="site-footer">
-        <p>&copy; 2024 FixByFish <a href="../articles/privacypolicy.html" class="footer-link">Privacy Policy</a></p>
-        <p><a href="https://morals.artstation.com/" class="footer-link">ArtStation</a><a href="https://discord.com/invite/AmSq7Qdvan" class="footer-link">Discord</a><a href="https://shawnwolf.itch.io/" class="footer-link">Itch.io</a><a href="https://www.linkedin.com/in/shawntwolf/" class="footer-link">LinkedIn</a><p>
-    </footer>
 
     <!-- JavaScript -->
     <script src="../articleHandler.js"></script>
