simplified mobile view

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
 <!-- Site Body -->
 <body>
-    <div>
-        <img src="../images/FBF_Logo_White.png" class="logo">
+    <div class="navbar">
+        <img src="../images/FBF_Logo_White.png" class="logo" alt="Logo">
         <div class="tabs" id="tabs" onclick="togglePanel()">
             <img src="../images/Tabs.png" alt="Tabs Icon" class="tabs-icon">
         </div>
