--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta name="keywords" content="HTML, CSS">
     <meta name="description" content="A personal website covering a wide range of projects and topics">
     <title>Fix By Fish</title>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../data/styles.css">
     <link rel="icon" href="../images/FBF_Logo_White_Favicon.png" type="image/png">
 </head>
 
@@ -40,7 +40,7 @@
             <ul id="article-list"></ul>
         </div>
     </div>
-    <div class="header-image" style="background: url('../articles/Headers/PlaceHolder.png') no-repeat center center/cover;"></div>
+    <div class="header-image" style="background: url('../articles/headers/PlaceHolder.png') no-repeat center center/cover;"></div>
     <div class="container">
         <div class="main-content">
             <div class="txt-header-container">
@@ -73,12 +73,13 @@
                     <a href="https://shawnwolf.itch.io/" class="footer-link">Itch.io</a>
                     <a href="https://www.linkedin.com/in/shawntwolf/" class="footer-link">LinkedIn</a>
                 </div>
+                <br>
             </footer>
         </div>
     </div>
 
     <!-- JavaScript -->
-    <script src="../articleHandler.js"></script>
+    <script src="../data/articleHandler.js"></script>
 
 </body>
 
