--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
     <meta name="keywords" content="HTML, CSS">
     <meta name="description" content="A personal website covering a wide range of projects and topics">
     <title>Fix By Fish</title>
-    <link rel="stylesheet" href="../data/styles.css">
-    <link rel="icon" href="../images/FBF_Logo_White_Favicon.png" type="image/png">
+    <link rel="stylesheet" href="/data/styles.css">
+    <link rel="icon" href="/images/FBF_Logo_White_Favicon.png" type="image/png">
 </head>
 
 <!-- Site Body -->
 <body>
     <div class="navbar">
-        <img src="../images/FBF_Logo_White.png" class="logo" alt="Logo">
+        <img src="/images/FBF_Logo_White.png" class="logo" alt="Logo">
         <div class="tabs" id="tabs" onclick="togglePanel()">
-            <img src="../images/Tabs.png" alt="Tabs Icon" class="tabs-icon">
+            <img src="/images/Tabs.png" alt="Tabs Icon" class="tabs-icon">
         </div>
         <div class="panel" id="panel">
             <ul id="article-list"></ul>
         </div>
     </div>
-    <div class="header-image" style="background: url('../articles/headers/PlaceHolder.png') no-repeat center center/cover;"></div>
+    <div class="header-image" style="background: url('/articles/headers/PlaceHolder.png') no-repeat center center/cover;"></div>
     <div class="container">
         <div class="main-content">
             <div class="txt-header-container">
@@ -65,7 +65,7 @@
         <!-- Site Footer -->
         <div class="txt-site-footer">
             <footer class="site-footer">
-                <p>&copy; 2024 FixByFish <a href="../articles/privacypolicy.html" class="footer-link">Privacy Policy</a></p>
+                <p>&copy; 2024 FixByFish <a href="/articles/privacypolicy.html" class="footer-link">Privacy Policy</a></p>
                 <div class="links-footer">
                     <a href="https://morals.artstation.com/" class="footer-link">ArtStation</a>
                     <a href="https://discord.com/invite/AmSq7Qdvan" class="footer-link">Discord</a>
@@ -79,7 +79,7 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="../data/articleHandler.js"></script>
+    <script src="/data/articleHandler.js"></script>
 
 </body>
 
