--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
     <meta name="description" content="A personal website covering a wide range of projects and topics">
     <title>Fix By Fish</title>
     <link rel="stylesheet" href="/data/styles.css">
-    <link rel="icon" href="/images/FBF_Logo_White_Favicon.png" type="image/png">
+    <link rel="icon" href="/images/icons/FBF_Logo_White_Favicon.png" type="image/png">
 </head>
 
 <!-- Site Body -->
 <body>
     <div class="navbar">
-        <img src="/images/FBF_Logo_White.png" class="logo" alt="Logo">
+        <img src="/images/icons/FBF_Logo_White.png" class="logo" alt="Logo">
         <div class="tabs" id="tabs" onclick="togglePanel()">
-            <img src="/images/Tabs.png" alt="Tabs Icon" class="tabs-icon">
+            <img src="/images/icons/Tabs.png" alt="Tabs Icon" class="tabs-icon">
         </div>
         <div class="panel" id="panel">
             <ul id="article-list"></ul>
         </div>
     </div>
-    <div class="header-image" style="background: url('/articles/headers/PlaceHolder.png') no-repeat center center/cover;"></div>
+    <div class="header-image" style="background: url('/images/headers/PlaceHolder.png') no-repeat center center/cover;"></div>
     <div class="container">
         <div class="main-content">
             <div class="txt-header-container">
