fixed when favicon is pressed adds index.html to root directory

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <!-- Site Body -->
 <body>
     <div class="navbar">
-        <img src="/images/icons/FBF_Logo_White.png" class="logo" alt="Logo">
+        <a href="/"><img src="/images/icons/FBF_Logo_White.png" class="logo"></a>
         <div class="tabs" id="tabs" onclick="togglePanel()">
             <img src="/images/icons/Tabs.png" alt="Tabs Icon" class="tabs-icon">
         </div>
