changed some formating to make more readable

--- a/data/footer.html
+++ b/data/footer.html
@@ -6,11 +6,13 @@
             <a href="mailto:swolf@fixbyfish.com" class="footer-link">Email</a>
             <a href="https://shawnwolf.itch.io/" class="footer-link">Itch.io</a>
             <a href="https://www.linkedin.com/in/shawntwolf/" class="footer-link">LinkedIn</a>
-            <a href="/rss-feed.xml" target="_blank">RSS Feed</a>
+            <a href="/rss-feed.xml" target="_blank">RSS</a>
             <a href="https://www.youtube.com/@FixByFish" class="footer-link">Youtube</a>
         </div>
-        <p>&copy; 2024 FixByFish
+        <p>
+        &copy;2024 FixByFish
         <a href="/articles/privacypolicy" class="footer-link">Privacy Policy</a>
+        Some Rights Reserved
         </p>
     </footer>
 </div>
