--- a/index.html
+++ b/index.html
@@ -24,15 +24,29 @@
             </div>
             <div class="body-bubble">
                 <h2>Welcome</h2>
-                <p>Hi, I'm Shawn, a technician based in Cleveland, Ohio. This is my personal website for sharing projects and interests. I started very recently, so please keep that in mind, as some placeholder images and articles remain.</p>
+                <p>
+                    Hi, I'm Shawn, a technician based in Cleveland, Ohio. This is my personal website for sharing projects and interests.
+                    Expect posts about projects ranging from programming, electronic repair & modifications, 3D printing, 
+                    2D artwork, and whatever other sidequests I find myself taking part in.
+
+                </p>
                 <br>
 
                 <h2>Why make a website?</h2>
-                <p>I like making and sharing my projects, but I don't like the current state of social media. This site is my nerdy little corner of the internet where I can share until my heart's content while avoiding the toxic communities of mainstream social media or the addictive cycle of posting for engagement. If people find my site interesting, it's perfect, but this is more for me than anyone else.</p>
+                <p>
+                    I like making and sharing my projects, but I don't like the current state of social media. 
+                    This site is my nerdy little corner of the internet where I can share until my heart's 
+                    content while avoiding the toxic communities of mainstream social media or the addictive 
+                    cycle of posting for engagement. If people find my site interesting, it's perfect, but this 
+                    is more for me than anyone else.
+                </p>
                 <br>
 
                 <h2>Why the name?</h2>
-                <p>It's pretty simple. I use the username Fish on most websites, and I like to fix stuff ~so Fix By Fish. Repairing electronics is only a portion of the content I want to post here.</p>
+                <p>
+                    It's pretty simple. I use the username Fish on most websites, and I like to fix stuff ~so Fix 
+                    By Fish. Repairing electronics is only a portion of the content I want to post here.
+                </p>
                 <br>
             </div>
         </div>
