added recommended articles

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                 <br>
             </div>
         </div>
+        <!-- Recommended Articles -->
+        <div id="recommended"></div>
+        
         <!-- Site Footer -->
         <div id="footer"></div>
     </div>
