--- a/data/head.html
+++ b/data/head.html
@@ -18,4 +18,5 @@
     <meta name="keywords" content="HTML, CSS">
     <title>Fix By Fish</title>
     <link rel="icon" href="/images/icons/FBF_Logo_White_Favicon.png" type="image/png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
