--- a/data/footer.html
+++ b/data/footer.html
@@ -1,18 +1,29 @@
 <div class="txt-site-footer">
     <footer class="site-footer">
         <div class="links-footer">
-            <a href="https://morals.artstation.com/" class="footer-link">ArtStation</a>
-            <a href="https://discord.com/invite/AmSq7Qdvan" class="footer-link">Discord</a>
-            <a href="mailto:swolf@fixbyfish.com" class="footer-link">Email</a>
-            <a href="https://shawnwolf.itch.io/" class="footer-link">Itch.io</a>
-            <a href="https://www.linkedin.com/in/shawntwolf/" class="footer-link">LinkedIn</a>
-            <a href="/rss-feed.xml" target="_blank">RSS</a>
-            <a href="https://www.youtube.com/@FixByFish" class="footer-link">Youtube</a>
+            <a href="https://morals.artstation.com/" class="footer-link">
+                <img src="/images/icons/ArtStation_Logo.png" alt="ArtStation">
+            </a>
+            <a href="mailto:swolf@fixbyfish.com" class="footer-link">
+                <img src="/images/icons/Email_Logo.png" alt="Email">
+            </a>
+            <a href="https://shawnwolf.itch.io/" class="footer-link">
+                <img src="/images/icons/ItchIo_Logo.png" alt="Itch.io">
+            </a>
+            <a href="/rss-feed.xml" class="footer-link">
+                <img src="/images/icons/Rss_Logo.png" alt="RSS">
+            </a>
+            <a href="https://discord.com/invite/AmSq7Qdvan" class="footer-link">
+                <img src="/images/icons/Discord_Logo.png" alt="Discord">
+            </a>
+            <a href="https://www.youtube.com/@FixByFish" class="footer-link">
+                <img src="/images/icons/Youtube_Logo.png" alt="YouTube">
+            </a>
         </div>
         <p>
-        &copy;2024 FixByFish
-        <a href="/articles/privacypolicy" class="footer-link">Privacy Policy</a>
-        Some Rights Reserved
+            &copy;2024 FixByFish
+            <a href="/articles/privacypolicy" class="footer-link">Privacy Policy</a>
+            Some Rights Reserved
         </p>
     </footer>
 </div>
