mobile formating made prettier and sierre said go to bed

--- a/data/footer.html
+++ b/data/footer.html
@@ -1,10 +1,5 @@
 <div class="txt-site-footer">
     <footer class="site-footer">
-        <p>
-            &copy;2024 FixByFish
-            <a href="/articles/privacypolicy" class="footer-link">Privacy Policy</a>
-            Some Rights Reserved
-        </p>
         <div class="links-footer">
             <a href="https://morals.artstation.com/" class="footer-link">
                 <img src="/images/icons/ArtStation_Logo.png" alt="ArtStation">
@@ -25,5 +20,9 @@
                 <img src="/images/icons/Youtube_Logo.png" alt="YouTube">
             </a>
         </div>
+        <p>
+            &copy;2024 FixByFish<br>
+            <a href="/articles/privacypolicy" class="footer-link">Privacy Policy</a>
+        </p>
     </footer>
 </div>
