--- a/data/footer.html
+++ b/data/footer.html
@@ -4,7 +4,7 @@
             <a href="https://morals.artstation.com/" class="footer-link">
                 <img src="/images/icons/ArtStation_Logo.png" alt="ArtStation">
             </a>
-            <a href="mailto:swolf@fixbyfish.com" class="footer-link">
+            <a href="mailto:shawn@fixbyfish.com" class="footer-link">
                 <img src="/images/icons/Email_Logo.png" alt="Email">
             </a>
             <a href="https://shawnwolf.itch.io/" class="footer-link">
