--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
 
 <html>
 <!-- Site Head -->
+    <head> 
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZELLS7ZJQE"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-ZELLS7ZJQE');
+        </script>
+    </head>
+
     <style>
         body {
             background-color: #050505;
