updated head and data structure

--- a/data/footer.html
+++ b/data/footer.html
@@ -2,19 +2,19 @@
     <footer class="site-footer">
         <div class="links-footer">
             <a href="https://morals.artstation.com/" class="footer-link">
-                <img src="/images/icons/ArtStation_Logo.png" alt="ArtStation">
+                <img src="/images/ArtStation_Logo.png" alt="ArtStation">
             </a>
             <a href="mailto:shawn@fixbyfish.com" class="footer-link">
-                <img src="/images/icons/Email_Logo.png" alt="Email">
+                <img src="/images/Email_Logo.png" alt="Email">
             </a>
             <a href="https://shawnwolf.itch.io/" class="footer-link">
-                <img src="/images/icons/ItchIo_Logo.png" alt="Itch.io">
+                <img src="/images/ItchIo_Logo.png" alt="Itch.io">
             </a>
             <a href="/rss-feed.xml" class="footer-link">
-                <img src="/images/icons/Rss_Logo.png" alt="RSS">
+                <img src="/images/Rss_Logo.png" alt="RSS">
             </a>
             <a href="https://discord.com/invite/AmSq7Qdvan" class="footer-link">
-                <img src="/images/icons/Discord_Logo.png" alt="Discord">
+                <img src="/images/Discord_Logo.png" alt="Discord">
             </a>
         </div>
         <p>
