--- a/data/navbar.html
+++ b/data/navbar.html
@@ -1,7 +1,7 @@
 <div class="navbar">
-    <a href="/"><img src="/images/icons/FBF_Logo_White.png" class="logo"></a>
+    <a href="/"><img src="/images/FBF_Logo_White.png" class="logo"></a>
     <div class="tabs" id="tabs" onclick="togglePanel()">
-        <img src="/images/icons/Tabs.png" alt="Tabs Icon" class="tabs-icon">
+        <img src="/images/Tabs.png" alt="Tabs Icon" class="tabs-icon">
     </div>
     <div class="panel" id="panel">
         <ul id="article-list"></ul>
