--- a/data/footer.html
+++ b/data/footer.html
@@ -1,14 +1,8 @@
 <div class="txt-site-footer">
     <footer class="site-footer">
         <div class="links-footer">
-            <a href="https://morals.artstation.com/" class="footer-link">
-                <img src="/images/ArtStation_Logo.png" alt="ArtStation">
-            </a>
             <a href="mailto:shawn@fixbyfish.com" class="footer-link">
                 <img src="/images/Email_Logo.png" alt="Email">
-            </a>
-            <a href="https://shawnwolf.itch.io/" class="footer-link">
-                <img src="/images/ItchIo_Logo.png" alt="Itch.io">
             </a>
             <a href="/rss-feed.xml" class="footer-link">
                 <img src="/images/Rss_Logo.png" alt="RSS">
@@ -18,7 +12,7 @@
             </a>
         </div>
         <p>
-            &copy;2024 FixByFish<br>
+            &copy;2025 Fix By<br>
             <a href="/articles/privacypolicy" class="footer-link">Privacy Policy</a>
         </p>
     </footer>
