--- a/index.html
+++ b/index.html
@@ -36,15 +36,27 @@
         <div class="main-content">
             <div class="txt-header-container">
                 <div class="txt-header-bubble">
-                    <h1>Fix By</h1>
+                    <h1>Fix By Fish</h1>
                 </div>
             </div>
             <div class="body-bubble">
-                <h2>Welcome to Fix By</h2>
+                <h2>Welcome</h2>
                 <p>
-                    your trusted partner for all-purpose electronic repairs. 
-                    We fix it all from computers, phones, and more with expert care. 
-                    Fast, reliable service to get your tech running again.
+                    Hi, my name is Shawn, I'm an IPC Certified technician based in Cleveland, Ohio. This is my personal 
+                    website for sharing projects and interests. Expect posts about projects ranging from programming, 
+                    electronic repair & modifications, 3D printing, 2D artwork, and whatever other sidequests I find 
+                    myself taking part in.
+
+                </p>
+                <br>
+
+                <h2>Why make a website?</h2>
+                <p>
+                    I like making stuff and sharing my projects, but I don't like the current state of social media. 
+                    This site is my nerdy little corner of the internet where I can share until my heart's 
+                    content while avoiding the toxic communities of mainstream social media or the addictive 
+                    cycle of posting for engagement. If people find my site interesting, it's perfect, but this 
+                    is more for me than anyone else.
                 </p>
                 <br>
             </div>
