--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
                 <h2>Welcome</h2>
                 <p>
                     Hi, my name is Shawn, I'm an IPC Certified technician based in Cleveland, Ohio. This is my personal 
-                    website for sharing projects and interests. Expect posts about projects ranging from programming, 
-                    electronic repair & modifications, 3D printing, 2D artwork, and whatever other sidequests I find 
-                    myself taking part in.
+                    website for sharing projects and interests. Expect in-frequent posts about projects ranging from programming, 
+                    electronic repair, 3D printing, 2D artwork, and whatever other sidequests I find myself taking part in.
 
                 </p>
                 <br>
