updated landing page

--- a/index.html
+++ b/index.html
@@ -42,10 +42,8 @@
             <div class="body-bubble">
                 <h2>Welcome</h2>
                 <p>
-                    Hi, my name is Shawn, I'm an IPC Certified technician based in Cleveland, Ohio. This is my personal 
-                    website for sharing projects and interests. Expect in-frequent posts about projects ranging from programming, 
-                    electronic repair, 3D printing, 2D artwork, and whatever other sidequests I find myself taking part in.
-
+                    Hi, my name is Shawn, I'm an IPC Certified technician based out of Ohio. This is my personal 
+                    website for sharing projects and interests.
                 </p>
                 <br>
 
