--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Fix By Fish | Personal Website</title>
     <meta name="description" content="A personal website covering a wide range of projects and topics.">
 
+    <!-- GoatCounter Analytics -->
+    <script data-goatcounter="https://shawn.goatcounter.com/count"
+        async src="https://gc.zgo.at/count.js"></script>
+
     <!-- Styles -->
     <link rel="stylesheet" href="/data/styles.css">
     <style>
@@ -15,15 +19,6 @@
             color: #fff;
         }
     </style>
-
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZELLS7ZJQE"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-ZELLS7ZJQE');
-    </script>
 </head>
 
 <body>
