--- a/chatroom/index.html
+++ b/chatroom/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Placeholder | Article</title>
-    <meta name="description" content="[PLACEHOLDER]">
+    <title>Chatroom | Public</title>
+    <meta name="description" content="A public tech focused chatroom for all">
 
     <!-- GoatCounter Analytics -->
     <script data-goatcounter="https://shawn.goatcounter.com/count"
@@ -14,17 +14,11 @@
     <!-- Styles -->
     <link rel="stylesheet" href="/data/styles.css">
     <style>
-        body { background-color: #050505; color: #fff; }
+        body {
+            background-color: #050505;
+            color: #fff;
+        }
     </style>
-
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZELLS7ZJQE"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-ZELLS7ZJQE');
-    </script>
 </head>
 
 <body>
