updated home page

--- a/index.html
+++ b/index.html
@@ -46,14 +46,37 @@
                 <section id="welcome" class="content-block">
                     <h2>Welcome</h2>
                     <p>
-                        Hi, my name is Shawn. I'm an IPC Certified technician based out of Ohio. This is my personal website for sharing projects and interests.
+                        Hi, I'm [Fish], an electronics technician based out of Ohio, with experience
+                        in 3D design, programming, and electronics engineering.
+                        Congratulations on finding my little ongoing project, 
+                        I appreciate any and all interest in my work. Here you can read about my
+                        projects, interests, and whatever else I plan on talking about. 
+                        A bit of a content warning, as this is my personal website all my thoughts
+                        and concerns are unfiltered. You get me, nothing more nothing less.
                     </p>
                 </section>
 
-                <section id="purpose" class="content-block">
-                    <h2>Why Make a Website?</h2>
+                <section id="why" class="content-block">
+                    <h2>Why</h2>
                     <p>
-                        I enjoy making things and sharing my projects, but I don't like the current state of social media. This site is my nerdy little corner of the internet where I can post freely while avoiding the toxic communities and engagement-driven cycles of mainstream platforms. If people enjoy it, that's great, but primarily this space is for me.
+                        I hate almost the entirety of social media, and truthfully, 
+                        what the internet has shifted towards as a whole. Essentially, 
+                        all major platforms are like slot machines, flashing lights, 
+                        and ringing bells to keep you in line. If you so much as look 
+                        away for a minute, these platforms adjust their algorithms to 
+                        fine-tune the content for you as a person. When it comes to the 
+                        content they push, some of it is to make you mad, some is to 
+                        make you sad, and some is to make you laugh. The reason they do 
+                        this is that they want a rise out of you. An emotional person is 
+                        an engaged person. 
+
+                        These companies have no qualms about damaging your attention span 
+                        and breaching your privacy as an individual. Therefore, I have no 
+                        qualms with doing my part to create distance for myself and advocating 
+                        for others to do the same. <b>FUCK</b> Facebook, Google, Microsoft, 
+                        Flock. You do not need them, you should not want them. There are so 
+                        many excellent alternatives that value your privacy as an individual, 
+                        and I want to talk about them all.
                     </p>
                 </section>
 
