Ai stance article

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
                         These companies have no qualms about damaging your attention span 
                         and breaching your privacy as an individual. Therefore, I have no 
                         qualms with doing my part to create distance for myself and advocating 
-                        for others to do the same. <b>FUCK</b> Facebook, Google, Microsoft, 
-                        Flock. You do not need them, you should not want them. There are so 
-                        many excellent alternatives that value your privacy as an individual, 
-                        and I want to talk about them all.
+                        for others to do the same. <b>FUCK</b> Amazon, Facebook, Google, Microsoft, 
+                        Flock, and every other company that seeks to deanonomise private citizens. 
+                        There are so many excellent alternatives that value your privacy as an 
+                        individual, and I want to talk about them all.
                     </p>
                 </section>
 
