--- a/chatroom/index.html
+++ b/chatroom/index.html
@@ -1,175 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chatroom | Public</title>
-    <meta name="description" content="A public tech focused chatroom for all">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chatroom | Public</title>
+  <meta name="description" content="A public tech focused chatroom for all" />
 
-    <!-- GoatCounter Analytics -->
-    <script data-goatcounter="https://shawn.goatcounter.com/count"
-        async src="https://gc.zgo.at/count.js"></script>
+  <!-- GoatCounter Analytics -->
+  <script data-goatcounter="https://shawn.goatcounter.com/count" async src="https://gc.zgo.at/count.js"></script>
 
-    <!-- Styles -->
-    <link rel="stylesheet" href="/data/styles.css">
-    <style>
-        body {
-            background-color: #050505;
-            color: #fff;
-        }
-    </style>
+  <!-- Styles -->
+  <link rel="stylesheet" href="/data/styles.css" />
+  <style>
+    body { background-color:#050505; color:#fff; }
+  </style>
 </head>
 
 <body>
+  <noscript>
+    <p>This site requires JavaScript to function properly. Please enable JavaScript in your browser settings.</p>
+  </noscript>
 
-    <noscript>
-        <p>This site requires JavaScript to function properly. Please enable JavaScript in your browser settings.</p>
-    </noscript>
+  <div id="head"></div>
+  <div id="navbar"></div>
 
-    <div id="head"></div>
-    <div id="navbar"></div>
+  <div class="header-image" style="background:url('/images/headers/placeholder/Header.png') no-repeat center center/cover;"></div>
 
-    <div class="header-image" style="background: url('/images/headers/placeholder/Header.png') no-repeat center center/cover;"></div>
-
-    <div class="container">
-        <div class="main-content">
-
-            <div class="txt-header-container">
-                <div class="txt-header-bubble">
-                    <h1>Community Chat</h1>
-                </div>
-            </div>
-
-            <div class="body-bubble">
-                <!-- ✅ Community Chat (uses your existing content-block styling) -->
-                <section id="community-chat" class="content-block">
-
-                    <div id="messages"
-                        style="height:420px; overflow-y:auto; border:1px solid #fff; border-radius:6px; padding:10px; background:#050505;">
-                    </div>
-
-                    <!-- Single-line chat input: name | message | send -->
-                    <div class="chat-row" style="display:flex; gap:8px; padding:8px 12px;">
-                    <input class="chat-name" id="displayName" placeholder="name" maxlength="24"
-                        style="flex:0 0 10%; min-width:120px; padding:8px; background:#050505; color:#fff; border:1px solid #fff; border-radius:4px; font:inherit;">
-
-                    <input class="chat-msg" id="msg" placeholder="Type a message..."
-                        style="flex:1; padding:8px; background:#050505; color:#fff; border:1px solid #fff; border-radius:4px; font:inherit;">
-
-                    <button class="chat-send" id="sendBtn" type="button"
-                        style="padding:8px 14px; background:#050505; border:1px solid #fff; border-radius:4px; color:#fff; cursor:pointer; font:inherit;">
-                        Send
-                    </button>
-                    </div>
-                </section>
-            </div>
+  <div class="container">
+    <div class="main-content">
+      <div class="txt-header-container">
+        <div class="txt-header-bubble">
+          <h1>Community Chat</h1>
         </div>
+      </div>
 
-        <!-- Recommended Articles -->
-        <div id="recommended"></div>
+      <div class="body-bubble">
+        <section id="community-chat" class="content-block">
 
-        <!-- Site Footer -->
-        <div id="footer"></div>
+          <!-- Status / errors -->
+          <div id="chatStatus" style="padding:8px 12px; font-size:0.9em; opacity:0.95;"></div>
+
+          <div id="messages"
+               style="height:420px; overflow-y:auto; border:1px solid #fff; border-radius:6px; padding:10px; background:#050505;">
+          </div>
+
+          <div class="chat-row" style="display:flex; gap:8px; padding:8px 12px;">
+            <input class="chat-name" id="displayName" placeholder="name" maxlength="24"
+                   style="flex:0 0 10%; min-width:120px; padding:8px; background:#050505; color:#fff; border:1px solid #fff; border-radius:4px; font:inherit;" />
+
+            <input class="chat-msg" id="msg" placeholder="Type a message..."
+                   style="flex:1; padding:8px; background:#050505; color:#fff; border:1px solid #fff; border-radius:4px; font:inherit;" />
+
+            <button class="chat-send" id="sendBtn" type="button"
+                    style="padding:8px 14px; background:#050505; border:1px solid #fff; border-radius:4px; color:#fff; cursor:pointer; font:inherit;">
+              Send
+            </button>
+          </div>
+
+        </section>
+      </div>
     </div>
 
-    <!-- ✅ PocketBase messenger (autosave name, no save button) -->
-    <script type="module">
-        import PocketBase from "https://cdn.jsdelivr.net/npm/pocketbase/dist/pocketbase.es.mjs";
-        const pb = new PocketBase("https://independent-dead.pockethost.io");
+    <div id="recommended"></div>
+    <div id="footer"></div>
+  </div>
 
-        const $ = (id) => document.getElementById(id);
-        const messagesDiv = $("messages");
-        const msgInput = $("msg");
-        const nameInput = $("displayName");
-        const sendBtn = $("sendBtn");
+  <!-- Non-module scripts can stay normal -->
+  <script src="/data/guiHandler.js"></script>
+  <script src="/data/articleHandler.js"></script>
 
-        const NAME_KEY = "chatDisplayName";
-
-        const esc = (s) => String(s ?? "")
-            .replaceAll("&","&amp;")
-            .replaceAll("<","&lt;")
-            .replaceAll(">","&gt;")
-            .replaceAll('"',"&quot;")
-            .replaceAll("'","&#039;");
-
-        const setName = (raw) => {
-            const n = String(raw ?? "").trim().replace(/\s+/g, " ").slice(0, 24);
-            if (!n) localStorage.removeItem(NAME_KEY);
-            else localStorage.setItem(NAME_KEY, n);
-            return n;
-        };
-
-        const getName = () => {
-            const n = (localStorage.getItem(NAME_KEY) || "").trim();
-            return n ? n : "Guest";
-        };
-
-        const render = (m) => {
-            const el = document.createElement("div");
-            el.style.marginBottom = "10px";
-            el.innerHTML = `
-                <div style="font-size:0.8em; color:#fff;">
-                    ${esc(m.name || "Guest")} • ${new Date(m.created).toLocaleString()}
-                </div>
-                <div>${esc(m.text || "")}</div>
-            `;
-            messagesDiv.appendChild(el);
-            messagesDiv.scrollTop = messagesDiv.scrollHeight;
-        };
-
-        const load = async () => {
-            try {
-                const list = await pb.collection("messages").getList(1, 50, { sort: "created" });
-                messagesDiv.innerHTML = "";
-                list.items.forEach(render);
-            } catch (err) {
-                console.error(err);
-                messagesDiv.innerHTML = `<div style="color:#fff;">Error loading messages (check console)</div>`;
-            }
-        };
-
-        // init name from storage
-        nameInput.value = localStorage.getItem(NAME_KEY) || "";
-
-        // autosave name as user types (debounced)
-        let nameTimer = null;
-        nameInput.addEventListener("input", () => {
-            clearTimeout(nameTimer);
-            nameTimer = setTimeout(() => setName(nameInput.value), 200);
-        });
-
-        const send = async () => {
-            const text = msgInput.value.trim();
-            if (!text) return;
-
-            // ensure latest typed name is saved before sending
-            setName(nameInput.value);
-
-            try {
-                await pb.collection("messages").create({ name: getName(), text });
-                msgInput.value = "";
-                await load();
-            } catch (err) {
-                console.error(err);
-                alert("Failed to send message (check console).");
-            }
-        };
-
-        sendBtn.onclick = send;
-
-        // Enter sends message
-        msgInput.addEventListener("keydown", (e) => {
-            if (e.key === "Enter") send();
-        });
-
-        // first load
-        await load();
-    </script>
-
-    <!-- JavaScript -->
-    <script src="/data/guiHandler.js"></script>
-    <script src="/data/articleHandler.js"></script>
-
+  <!-- IMPORTANT: chatroom.js uses import + top-level await, so it MUST be a module -->
+  <script type="module" src="/data/chatroom.js"></script>
 </body>
 </html>
