--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fix By Fish | Personal Website</title>
+    <title>Fix By Fish</title>
     <meta name="description" content="A personal website covering a wide range of projects and topics.">
 
     <!-- GoatCounter Analytics -->
