--- a/data/footer.html
+++ b/data/footer.html
@@ -7,14 +7,17 @@
             <a href="https://shawnwolf.itch.io/" class="footer-link">
                 <img src="/images/icons/ItchIo_Logo.png" alt="Itch.io">
             </a>
-            <a href="https://discord.com/invite/AmSq7Qdvan" class="footer-link">
-                <img src="/images/icons/Discord_Logo.png" alt="Discord">
+            <a href="https://gitlab.com/Morals" class="footer-link">
+                <img src="/images/icons/Gitlab_Logo.png" alt="Stoat">
+            </a>
+            <a href="https://stt.gg/X2Bm1jNr" class="footer-link">
+                <img src="/images/icons/Stoat_Logo.png" alt="Stoat">
             </a>
             <a href="/rss-feed.xml" class="footer-link">
                 <img src="/images/icons/Rss_Logo.png" alt="RSS">
             </a>
         </div>
-        <p>
+        <p> 
             &copy;2026 FixByFish<br>
             <a href="/articles/privacypolicy" class="footer-link">Privacy Policy</a>
         </p>
